# LP-Parser

./: .gitignore  LICENSE.md  README.md  config.yml  localization.yml  lp-config.yml  lp_parser.py  main.py  pyproject.toml  requirements.txt  run_lp_parser.bat  run_lp_parser.sh  settings.yml
config/: config.yml  settings.yml
rust_module/: Cargo.toml  pyproject.toml
rust_module/src/: lib.rs
src/: config.py  constants.py  extensions.py  file_manager.py  lp_parser.py  output_file.py  parser.py  progress_bar.py  utils.py
src/config/: config.py
src/constants/: constants.py
src/exceptions/: base.py  config.py  constants.py  exceptions.py  messages.py
src/extensions/: progress_bar.py  utils.py
src/file_operations/: constants.py  file_manager.py  output_file.py
