[tool.poetry]
name = "lp-parser"
version = "0.2.0"
description = "LP-Parser is a Python script designed to parse login and password information from a list of websites"
authors = ["zombyacoff, lazerofmagma"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.5"
bs4 = "^0.0.2"
PyYAML = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
